turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: not found: value blub
  blub = rule(state)(id)
  ^Turmite:20: error: not found: value blub
  setCouleurBrosse(colors(blub(0)))
                          ^Turmite:23: error: not found: value blub
  state = blub(2)
          ^Turmite:24: error: not found: value blub
  blub(1) match{
  ^